--- a/sobre_fbh.html
+++ b/sobre_fbh.html
@@ -1,19 +1,20 @@
 ---
 layout: default
-title: O Sindicato
-id: sindicato
+title: Page
+id: page
 ---
+
 	<section id="pageHeader">
 		<div class="wrapper">
 			<h1>{{ page.title }}</h1>
-			<a href="#" title="" class="associe-se">Quer se tornar um associado?<span>cadastre-se em menos de 1 minuto</span></a>
 		</div>
 	</section>
 
-	<section id="contentWrapper">
+	<section id="pageContent">
 		<div class="wrapper">
+
 			<section> 
-				<h2 class="greenTitle">Quem somos</h2>
+				<h2>Quem somos</h2>
 				<img src="{{ site.url }}imgTemp/content-horizontal.jpg" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -22,7 +23,7 @@ id: sindicato
 			</section>
 
 			<section class="palavraPresidente">
-				<h2 class="greenTitle">Palavra do presidente </h2>
+				<h2>Palavra do presidente </h2>
 				<img src="{{ site.url }}imgTemp/presidente.jpg" alt="">
 				<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
 
@@ -30,7 +31,7 @@ id: sindicato
 			</section>
 
 			<ul class="equipe">
-				<h2 class="greenTitle">Equipe</h2>
+				<h2>Equipe</h2>
 				<li>
 					<img src="{{ site.url }}imgTemp/equipe1.jpg" alt="">
 					<h3>Brandon Pitt</h3>
@@ -80,14 +81,8 @@ id: sindicato
 					<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae.</p>
 				</li>
 			</ul>
-
-		</div>
-
-		<div id="sidebar">
-{% include sidebar.html %}
 		</div>
 	</section>
-
 
 
 
